# MCP-REPAIRS-HISTORY

./: .dockerignore  .gitignore  Dockerfile.agent  Dockerfile.frontend  Dockerfile.mcp  FINAL_REPORT.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  config.py  pyproject.toml
backend/agent/: README.md  __init__.py  config.py  main.py  requirements.txt
backend/agent/api/: __init__.py  app.py  schemas.py
backend/agent/graph/: __init__.py  edges.py  graph_builder.py  state.py
backend/agent/graph/nodes/: __init__.py  aggregator.py  classifier.py  compliance.py  dealer_insights.py  repair_days.py  report_summary.py
backend/agent/llm/: __init__.py  gigachat_api_client.py  gigachat_setup.py  prompts.py
backend/agent/tools/: __init__.py  langchain_tools.py  mcp_client.py
backend/agent/utils/: __init__.py  formatters.py  vin_validator.py
backend/mcp_server/: README.md  config.py  formatters.py  models.py  requirements.txt  server.py  test_server.py
docs/: ARCHITECTURE.md  CHANGELOG.md  EXAMPLES.md  FILES_INDEX.md  INSTALLATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  requirements.txt  warranty-agent.service
frontend/: .gitignore  README.md  app.py  config.py  requirements.txt  run.sh
infra/: .env.example  DOCKER.md  QUICK_START.md  SECRETS_DESCRIPTION.md
infra/nginx/: nginx.conf
infra/nginx/conf.d/: mcp-server.conf
infra/scripts/: generate-certs.sh  generate-ssl-certs.sh  generate-token.sh
infra/systemd/: mcp-server.service
