[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.3",
    "httpx>=0.27.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.7.1",
    "mcp>=1.3.2",
    "uvicorn>=0.34.0",
    "starlette>=0.41.3",
]
